fix list-item indetation

--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -318,9 +318,8 @@ progress {
 dl,
 ol,
 ul {
-  list-style-position: inside;
   margin: 0 0 1.5rem;
-  padding: 0;
+  padding: 0 0 0 1.5rem;
 
   dd,
   ol,
