--- a/source/css/style.css
+++ b/source/css/style.css
@@ -276,9 +276,8 @@ progress {
 dl,
 ol,
 ul {
-  list-style-position: inside;
   margin: 0 0 1.5rem;
-  padding: 0; }
+  padding: 0 0 0 1.5rem; }
   dl dd,
   dl ol,
   dl ul,
