--- a/source/scss/layout/_header.scss
+++ b/source/scss/layout/_header.scss
@@ -1,6 +1,7 @@
 .header {
   background: $color-header-bg;
-  padding: $margin-element-bottom 0;
+  color: $color-header;
+  padding: 2rem 0;
 }
 
 .logo {
