--- a/source/scss/modules/_media.scss
+++ b/source/scss/modules/_media.scss
@@ -14,10 +14,12 @@
     }
 
     &--left {
+      float: left;
       margin: 0 1rem 1rem 0;
     }
 
     &--right {
+      float: right;
       margin: 0 0 1rem 1rem;
     }
 
