--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -248,7 +248,7 @@ input {
     color: $color-btn;
     cursor: pointer;
 
-    &:focus
+    &:focus,
     &:hover {
       background: $color-btn-hover-bg;
     }
