add assemble task

--- a/source/templates/partials/head.html
+++ b/source/templates/partials/head.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
 
   <meta charset="UTF-8">
-  <title>404 | File not found</title>
+  <title>{{ title }}</title>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
@@ -41,48 +38,3 @@
   <![endif]-->
 
 </head>
-
-
-<body>
-
-  <header class="header">
-
-  <div class="container">
-
-    <h1>404 | File not found</h1>
-
-  </div>
-
-</header>
-
-
-  <main class="main">
-
-    <div class="container">
-
-      
-
-<h1>Error 404 - File not found</h1>
-
-
-    </div>
-
-  </main>
-
-  <footer class="footer">
-
-  <div class="container">
-
-    FOOTER
-
-  </div>
-
-</footer>
-
-
-  <!-- build:js js/script.js -->
-  <script src="js/script.js"></script>
-  <!-- endbuild -->
-
-</body>
-</html>
