--- a/source/css/style.css
+++ b/source/css/style.css
@@ -20,13 +20,14 @@ template {
   display: none; }
 
 html {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  -webkit-font-font-smoothing: antialiased;
   font-size: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: grayscale;
   height: 100%;
-  text-rendering: optimizeLegibility; }
+  text-rendering: optimizeLegibility;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%; }
 
 body {
   background: #fafafa;
