--- a/source/templates/layout/default.html
+++ b/source/templates/layout/default.html
@@ -19,6 +19,7 @@
 
   {{> footer}}
 
+  {{> google-analytics}}
   <!-- build:js js/script.js -->
   <script src="js/script.js"></script>
   <!-- endbuild -->
