update seo meta information: - remove meta key tag - insert description dynamically

--- a/source/templates/partials/head.html
+++ b/source/templates/partials/head.html
@@ -7,8 +7,7 @@
 
   <!-- Search Engine -->
 
-  <meta name="description" content="max 155 Chars">
-  <meta name="keywords" content="10 words">
+  <meta name="description" content="{{ description }}">
 
   <!-- Mobile & Windows 8 -->
 
