--- a/source/scss/layout/_header.scss
+++ b/source/scss/layout/_header.scss
@@ -1,10 +1,10 @@
-.header {
+.site__header {
   background: $color-header-bg;
   color: $color-header;
   padding: 2rem 0;
 }
 
-.logo {
+.site__logo {
 
   img {
     margin: 0 auto;
