--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -15,9 +15,9 @@
 // Modules
 
 @import 'modules/articles';
-@import 'modules/audio';
-@import 'modules/buttons';
 @import 'modules/breadcrumb';
+@import 'modules/buttons';
+@import 'modules/embed';
 @import 'modules/forms';
 @import 'modules/gallery';
 @import 'modules/media';
@@ -26,7 +26,6 @@
 @import 'modules/search';
 @import 'modules/tables';
 @import 'modules/tags';
-@import 'modules/video';
 
 // Layout
 
