--- a/source/css/style.css
+++ b/source/css/style.css
@@ -83,7 +83,7 @@ strong {
   font-weight: bold; }
 
 blockquote {
-  margin: 0;
+  margin: 0 0 1.5rem;
   quotes: '\201C' '\201D' '\2018' '\2019'; }
   blockquote p:before {
     content: open-quote; }
@@ -251,7 +251,7 @@ dl,
 ol,
 ul {
   margin: 0 0 1.5rem;
-  padding: 0 0 0 1.5rem; }
+  padding: 0 0 0 1.25rem; }
   dl dd,
   dl ol,
   dl ul,
@@ -262,7 +262,7 @@ ul {
   ul ol,
   ul ul {
     margin: .5rem 0 0;
-    padding-left: 1.5rem; }
+    padding-left: 1.25rem; }
   dl dd,
   ol dd,
   ul dd {
@@ -270,14 +270,14 @@ ul {
   dl li,
   ol li,
   ul li {
-    margin-bottom: .5rem; }
+    margin-bottom: .25rem; }
 
 p {
-  margin: 0 0 .5rem; }
+  margin: 0 0 1.5rem; }
 
 pre {
   display: block;
-  margin: 0;
+  margin: 0 0 1.5rem;
   overflow: auto;
   word-break: break-all;
   word-wrap: break-word; }
@@ -313,6 +313,7 @@ svg {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+  margin: 0 0 1.5rem;
   text-align: left;
   width: 100%; }
 
@@ -325,39 +326,6 @@ th {
 video {
   height: auto;
   max-width: 100%; }
-
-article {
-  margin-bottom: 3rem; }
-  article:before, article:after {
-    content: ' ';
-    display: table; }
-  article:after {
-    clear: both; }
-  article address,
-  article blockquote,
-  article dl,
-  article hr,
-  article p,
-  article pre,
-  article ol,
-  article ul,
-  article table {
-    margin-bottom: 1.5rem; }
-    article address:last-child,
-    article blockquote:last-child,
-    article dl:last-child,
-    article hr:last-child,
-    article p:last-child,
-    article pre:last-child,
-    article ol:last-child,
-    article ul:last-child,
-    article table:last-child {
-      margin-bottom: 0; }
-  article li {
-    margin-bottom: .5rem; }
-    article li ol,
-    article li ul {
-      margin-top: .5rem; }
 
 .breadcrumb ul {
   list-style: none;
