--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -992,7 +992,9 @@ add(a, b);</code></pre>
 
   <h2>Navigation</h2>
 
-  <nav class="nav nav--horizontal nav--dropdown" role="navigation">
+  <h3>Navigation Dropdown</h3>
+
+  <nav class="nav nav--inline nav--dropdown" role="navigation">
 
     <ul>
       <li><a href="#">Level 1 Item 1</a></li>
@@ -1020,7 +1022,9 @@ add(a, b);</code></pre>
 
   </nav>
 
-  <nav class="nav nav--vertical nav--dropdown">
+  <h3>Navigation Dropdown Right</h3>
+
+  <nav class="nav nav--dropdown nav--dropdown--right">
 
     <ul>
       <li><a href="#">Level 1 Item 1</a></li>
