--- a/source/scss/helpers/_icons.scss
+++ b/source/scss/helpers/_icons.scss
@@ -4,7 +4,7 @@
 
 .icon {
   display: inline-block;
-  fill: $color;
+  fill: $color-base;
   height: 1em;
   vertical-align: middle;
   width: 1em;
