--- a/source/scss/modules/_forms.scss
+++ b/source/scss/modules/_forms.scss
@@ -31,7 +31,7 @@
   input[type="week"] {
     background-color: $color-input-bg;
     border: 1px solid $color-border;
-    height: $line-height + (.25em * 2);
+    height: $base-line-height + (.25em * 2);
     padding: .25rem .5rem;
     width: 100%;
 
