--- a/source/scss/_print.scss
+++ b/source/scss/_print.scss
@@ -3,7 +3,7 @@
   * {
     background: transparent;
     box-shadow: none;
-    color: $color;
+    color: $color-base;
     text-shadow: none;
   }
 
@@ -32,7 +32,7 @@
   }
 
   blockquote {
-    border-left: 3px solid $color;
+    border-left: 3px solid $color-base;
   }
 
   thead {
@@ -40,7 +40,7 @@
   }
 
   select {
-    background: $color-bg;
+    background: $color-base-bg;
   }
 
   .container {
