--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -2,12 +2,11 @@
 
 $root-font-size: 100%;
 
-$font-family: Arial;
-$font-family-fallback: sans-serif;
-$font-size: 1rem;
-$font-weight: 400;
-
-$line-height: 1.5em;
+$base-font-family: Arial;
+$base-font-family-fallback: sans-serif;
+$base-font-size: 1rem;
+$base-font-weight: 400;
+$base-line-height: 1.5em;
 
 $font-family-headings: inherit;
 $font-size-h1: 2rem;
