--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -656,7 +656,7 @@ add(a, b);</code></pre>
           <div class="form__field">
 
             <label for="password-input" id="password-label">Password</label>
-            <input type="password" id="password-input" placeholder="password-label" aria-describedby="password" required >
+            <input type="password" id="password-input" placeholder="password" aria-describedby="password" required >
 
           </div>
 
