--- a/source/scss/_colors.scss
+++ b/source/scss/_colors.scss
@@ -3,7 +3,7 @@
 $color-base: #303030;
 $color-base-bg: #fafafa;
 
-$color-headings: #686868;
+$color-headings: inherit;
 
 // Main Colors
 
@@ -44,11 +44,11 @@ $color-subline: #808080;
 
 // Layout
 
-$color-header: #686868;
-$color-header-bg: #fafafa;
+$color-header: inherit;
+$color-header-bg: inherit;
 
-$color-footer: #686868;
-$color-footer-bg: #fafafa;
+$color-footer: inherit;
+$color-footer-bg: inherit;
 
 // Buttons
 
