--- a/source/templates/partials/head.html
+++ b/source/templates/partials/head.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <title>{{ title }}</title>
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
   <!-- Search Engine -->
 
