add layouts and add wai-aria tags

--- a/source/templates/pages/404.html
+++ b/source/templates/pages/404.html
@@ -3,4 +3,8 @@ title: "404 | File not found"
 description: "Description goes here"
 ---
 
-<h1>Error 404 - File not found</h1>
+<div class="container">
+
+  <h1>Error 404 - File not found</h1>
+
+</div>
