--- a/source/templates/layouts/main-left-right.html
+++ b/source/templates/layouts/main-left-right.html
@@ -7,11 +7,19 @@
 
   {{> header}}
 
-  <main class="site__main" role="main">
+  <div class="container">
 
-    {{> body}}
+    <main class="site__main" role="main">
 
-  </main>
+      {{> body}}
+
+    </main>
+
+    {{> left }}
+
+    {{> right }}
+
+  </div>
 
   {{> footer}}
 
