--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -28,7 +28,10 @@
 // Layout
 
 @import 'layout/header';
+@import 'layout/container';
 @import 'layout/main';
+@import 'layout/left';
+@import 'layout/right';
 @import 'layout/footer';
 
 // Helpers
