--- a/source/templates/layouts/main-left-right.html
+++ b/source/templates/layouts/main-left-right.html
@@ -9,15 +9,19 @@
 
   <div class="container">
 
-    <main class="site__main" role="main">
+    <div class="site__container">
 
-      {{> body}}
+      <main class="site__main" role="main">
 
-    </main>
+        {{> body}}
 
-    {{> left }}
+      </main>
 
-    {{> right }}
+      {{> left }}
+
+      {{> right }}
+
+    </div>
 
   </div>
 
