--- a/source/templates/layouts/main-left.html
+++ b/source/templates/layouts/main-left.html
@@ -7,15 +7,19 @@
 
   {{> header}}
 
-  <div class="container">
+  <div class="site__container">
 
-    <main class="site__main" role="main">
+    <div class="container">
 
-      {{> body}}
+      <main class="site__main" role="main">
 
-    </main>
+        {{> body}}
 
-    {{> left }}
+      </main>
+
+      {{> left }}
+
+    </div>
 
   </div>
 
