--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -38,9 +38,11 @@ html {
 body {
   background: $color-base-bg;
   color: $color-base;
+  display: flex;
+  flex-direction: column;
   font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family, $base-font-family-fallback;
-  height: 100%;
   margin: 0;
+  min-height: 100%;
   position: relative;
 }
 
