--- a/source/templates/layouts/default.html
+++ b/source/templates/layouts/default.html
@@ -7,11 +7,15 @@
 
   {{> header}}
 
-  <main class="site__main" role="main">
+  <div class="site__container">
 
-    {{> body}}
+    <main class="site__main" role="main">
 
-  </main>
+      {{> body}}
+
+    </main>
+
+  </div>
 
   {{> footer}}
 
