--- a/source/scss/helpers/_utilities.scss
+++ b/source/scss/helpers/_utilities.scss
@@ -1,5 +1,24 @@
 // Positioning //
 
+.align {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+
+  &__item {
+
+    &--top {
+      align-self: flex-start;
+    }
+
+    &--bottom {
+      align-self: flex-end;
+    }
+
+  }
+
+}
+
 .center-block {
   display: block;
   margin-left: auto;
