--- a/source/scss/modules/_forms.scss
+++ b/source/scss/modules/_forms.scss
@@ -7,7 +7,12 @@
 
   &__field {
     @include clearfix();
+    display: flex;
     padding: .5rem 0;
+  }
+
+  &__input {
+    flex: 1;
   }
 
   select,
